<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/box_2"
    android:padding="5dp"
    tools:context=".RegisterPage">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:src="@drawable/minilogo"
        android:scaleType="fitXY"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/l1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:gravity="center_vertical"
                android:paddingHorizontal="5dp"
                android:text="@string/username"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/reg_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                android:textColor="#000"
                android:textSize="18dp"

                />

            <TextView
                android:id="@+id/l2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:gravity="center_vertical"
                android:paddingHorizontal="5dp"
                android:text="@string/password"
                android:textSize="18dp"

                />

            <EditText
                android:id="@+id/reg_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="10dp"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="#000"
                android:textSize="18dp"

                />

            <TextView
                android:id="@+id/l3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:gravity="center_vertical"
                android:paddingHorizontal="5dp"
                android:text="@string/conform_pasword"
                android:textSize="18dp"

                />

            <EditText
                android:id="@+id/reg_pass2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="10dp"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="#000"
                android:textSize="18dp"

                />

            <TextView
                android:id="@+id/l4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:gravity="center_vertical"
                android:paddingHorizontal="5dp"
                android:text="@string/pername"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/reg_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                android:textColor="#000"
                android:textSize="18dp"

                />

            <TextView
                android:id="@+id/l5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:text="@string/email"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/reg_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="10dp"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="#000"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/l6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:gravity="center_vertical"
                android:paddingHorizontal="5dp"
                android:text="@string/phone"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/reg_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="10dp"
                android:inputType="phone"
                android:padding="10dp"
                android:textColor="#000"
                android:textSize="18dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:hint="@string/usertype"
                android:layout_marginHorizontal="10dp"
                android:gravity="center_vertical"
                android:paddingHorizontal="5dp"
                android:textSize="18dp"  />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="vertical"
                android:background="@drawable/box_3"
                android:layout_marginBottom="10dp"
                android:layout_marginHorizontal="10dp"
                >
                <Spinner
                    android:id="@+id/log_type"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:padding="10dp"
                    android:textSize="18sp"
                    android:entries="@array/users"
                    />
            </LinearLayout>
        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp">

                <Button
                    android:id="@+id/reg_reg"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/box_4"

                    android:padding="10dp"
                    android:text="@string/save"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="18dp" />

                <Button
                    android:id="@+id/reg_cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/box_5"
                    android:padding="10dp"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="18dp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>