<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="30dp"
    android:background="@drawable/box_2"

    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/logo"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="10dp"
                android:textSize="24sp"
                android:layout_marginBottom="20dp"
                android:text="@string/logo"
                android:textAlignment="center"
                android:textColor="#991A99"
                android:textStyle="italic|bold"
                />
            <Button
                android:onClick="logClick"
                android:id="@+id/log_log"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="#000"
                android:textSize="20dp"
                android:drawableLeft="@drawable/enter"
                android:paddingVertical="20dp"
                android:paddingLeft="10dp"
                android:layout_marginHorizontal="30dp"
                android:background="@drawable/gradient_light"/>

            <Button
                android:onClick="logClick"
                android:id="@+id/log_reg"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="#000"
                android:textSize="20sp"
                android:paddingVertical="20dp"
                android:layout_marginHorizontal="30dp"
                android:drawableLeft="@drawable/register"
                android:paddingLeft="10dp"

                android:background="@drawable/gradient_light"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>