<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddRequest"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:elevation="5dp"
        android:paddingHorizontal="3dp">
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:src="@drawable/min1"
            android:gravity="left"
            />

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="50dp"
            android:gravity="right"
            />
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:src="@drawable/min2"
            android:gravity="right"
            />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginHorizontal="10dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/l1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Title"
                    android:padding="10dp"
                    android:textColor="#000"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    />
                <EditText
                    android:id="@+id/fm_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:padding="10dp"
                    android:textColor="#000"
                    android:textSize="16sp"
                    />
            </LinearLayout>

            <TextView
                android:id="@+id/l3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Details"
                android:padding="10dp"
                android:textColor="#000"
                android:textSize="16sp"
                android:background="#F1EFEF"
                android:layout_marginHorizontal="10dp"
                />
            <EditText
                android:layout_marginHorizontal="10dp"
                android:id="@+id/fm_details"
                android:layout_width="match_parent"
                android:lines="12"
                android:layout_height="wrap_content"
                android:hint="Enter the description"
                android:padding="10dp"
                android:textSize="16sp"
                android:layout_margin="10dp"

                />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:layout_marginHorizontal="10dp"
                android:paddingBottom="5dp"
                android:orientation="horizontal"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"

                >
                <Button
                    android:id="@+id/fm_save"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="16sp"
                    android:padding="10dp"
                    android:background="@drawable/gradient_move"
                    android:layout_marginHorizontal="10dp"/>

                <Button
                    android:visibility="gone"
                    android:id="@+id/fm_del"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/delete"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="16sp"
                    android:padding="10dp"
                    android:background="@drawable/box_6"
                    android:layout_marginHorizontal="10dp"/>
                <Button
                    android:id="@+id/fm_cancel"
                    android:layout_marginHorizontal="10dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="16sp"
                    android:padding="10dp"
                    android:background="@drawable/box_7"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>